feat-refactor: 자동차 이름 중복 시 해당 자동차 알림 구현 및 리팩토링 적용
중복된 자동차 이름 입력시에도 해당 자동차 이름을 에러와 함께 반한하도록 구현했고, 가독성 또는 SRP를 위한 메서드 분리를 적용시켰습니다.